--- a/HW04/romfs/Makefile
+++ b/HW04/romfs/Makefile
@@ -3,7 +3,10 @@
 # Makefile for the linux RomFS filesystem routines.
 #
 
-obj-$(CONFIG_ROMFS_FS) += romfs.o
+obj-m	:= romfs.o
+KVER	:= $(shell uname -r)
+KDIR	:= /lib/modules/$(KVER)/build
+PWD		:= $(shell pwd)
 
 romfs-y := storage.o super.o
 
@@ -11,3 +14,8 @@ ifneq ($(CONFIG_MMU),y)
 romfs-$(CONFIG_ROMFS_ON_MTD) += mmap-nommu.o
 endif
 
+all:
+	make -C $(KDIR) M=$(PWD) modules
+
+clean:
+	make -C $(KDIR) M=$(PWD) clean
